<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_name"
        android:textColor="@color/colorEditText" />

    <EditText
        android:id="@+id/et_group_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_large_height"
        android:layout_marginTop="@dimen/edit_text_margin_top"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="@dimen/edit_text_padding_left"
        android:textColor="@color/colorEditText"
        android:textCursorDrawable="@drawable/add_number_edit_text_cursor_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin_top"
        android:text="@string/description"
        android:textColor="@color/colorEditText" />

    <EditText
        android:id="@+id/et_group_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_xlarge_height"
        android:layout_marginTop="@dimen/edit_text_margin_top"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="@dimen/edit_text_padding_left"
        android:textColor="@color/colorEditText"
        android:textCursorDrawable="@drawable/add_number_edit_text_cursor_color" />

    <Button
        android:id="@+id/bt_add_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_number_button_height"
        android:layout_marginTop="@dimen/add_number_button_margin_top"
        android:background="@drawable/add_number_button"
        android:text="@string/add_group" />
</LinearLayout>